syntax = "proto3";

option java_multiple_files = true;

package com.grpc.server.service.temperature;

import "common/Status.proto";

message TemperatureRequest {
  float celsius = 1;
}

message TemperatureData {
  float fahrenheit = 1;
}

message TemperatureResponse {
  common.Status status = 1;
  TemperatureData data = 2;
}

service TemperatureService {
  rpc convertCelsiusToFahrenheit(TemperatureRequest) returns (TemperatureResponse);
}
